--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -481,19 +481,8 @@ mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, TeX("$Spring\\,Smolt \\rightarrow LGR\\,Survival\\,(HOR)"))
 ```
 
-# Spawner-to-Parr Relationship {.tabset .tabset-pills}
-
-## Beverton-Holt
-
-All red components are posterior summaries (medians and 95% credible intervals). The black curve is from an `nls()` fit on reconstructed parr and roughly approximated total egg production -- the grey region is the confidence interval around this fit.
-
-```{r eggs-to-parr, fig.width = 6, fig.height = 4}
-# extract posterior samples of the BH productivity and capacity parameters
-bh_params = post_subset(post, c("alpha", "^beta$"), matrix = T)
 ### LGR Smolt $\rightarrow O_0$ (NOR)
 
-# extract posterior summaries of total spawners by brood year
-Sa_tot = post_summ(post, "^Sa_tot[")
 ```{r hydro-nor-surv-fit, fig.width = 6, fig.height = 5}
 par(oma = c(1.5,1.5,0,0))
 plot_tseries(post_summ(post, sub_index("^phi_Ma_O0[.+,origin]$", origin = o_nor)), expit(jags_data$Lphi_obs_Ma_O0[observable,o_nor]), main = TeX("$LGR\\,Smolt \\rightarrow O_0\\,Survival\\,(NOR)"))
@@ -501,12 +490,8 @@ mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
 
-# extract posterior summaries of total egg production by brood year
-f_tot = post_summ(post, "^f_tot[")
 ### LGR Smolt $\rightarrow O_0$ (HOR)
 
-# extract posterior summaries of total parr recruits by brood year
-Pb = post_summ(post, "^Pb[")
 ```{r hydro-hor-surv-fit, fig.width = 6, fig.height = 5}
 par(oma = c(1.5,1.5,0,0))
 plot_tseries(post_summ(post, sub_index("^phi_Ma_O0[.+,origin]$", origin = o_hor)), expit(jags_data$Lphi_obs_Ma_O0[observable,o_hor]), main = TeX("$LGR\\,Smolt \\rightarrow O_0\\,Survival\\,(HOR)"))
@@ -514,19 +499,10 @@ mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
 
-# predict parr recruits along a sequence of spawner abundances
-Sa_pred = seq(0, max(Sa_tot[5,]), length = 30)
-f_pred = seq(0, max(f_tot[5,]), length = 30)
 ## Composition Data {.tabset .tabset-pills .tabset-fade}
 
-Pb_pred = t(sapply(1:post_dim(post, "saved"), function(i) BH(f_pred, bh_params[i,1], bh_params[i,2])))
-colnames(Pb_pred) = paste0("Pb_pred[", 1:length(Sa_pred), "]")
-Pb_pred = post_convert(cbind(postpack:::id_mat(post), Pb_pred))
-Pb_pred = post_summ(Pb_pred, "Pb_pred")
 Within a single year, the values across all panels sum to one.
 
-# fit ordinary least squares version
-ols_fit = fit_fecund_BH(jags_data)$BH_fit
 ### Weir Sampling {.tabset .tabset-pills}
 
 ```{r weir-comp-fit-func}
@@ -553,60 +529,32 @@ weir_comp_fit_plot = function(j) {
 }
 ```
 
-# draw 1000 random parameters
-ols_params = exp(rmvnorm(1000, coef(ols_fit), vcov(ols_fit)))
 #### CAT
 
-# calculate predicted curve at each pair/summarize
-ols_R_pred = t(sapply(1:1000, function(i) BH(f_pred, ols_params[i,1], ols_params[i,2])))
-ols_R_pred = apply(ols_R_pred, 2, function(x) quantile(x, c(0.5, 0.025, 0.975)))
 ```{r cat-weir-comp-fit, fig.width = 8, fig.height = 5}
 weir_comp_fit_plot(1)
 ```
 
-# graphical parameters
-par(mar = c(3,3,1,1), mgp = c(2,0.3,0), tcl = -0.2)
 #### LOS
 
-# empty plot
-plot(1, 1, type = "n", xlim = range(0, f_tot[5,]), ylim = range(0, Pb[5,], Pb_pred[5,]),
-     xlab = "Total Egg Production (millions)", ylab = "Parr Recruits", xaxt = "n")
 ```{r lost-weir-comp-fit, fig.width = 8, fig.height = 5}
 weir_comp_fit_plot(2)
 ```
 
-x_ticks = axisTicks(par("usr")[1:2], log = F)
-axis(side = 1, at = x_ticks, labels = x_ticks/1e6)
 #### MIN
 
-# draw fitted relationship: Bayesian
-polygon(c(f_pred, rev(f_pred)), c(Pb_pred[4,], rev(Pb_pred[5,])), col = alpha("salmon", 0.5), border = NA)
-lines(Pb_pred[4,] ~ f_pred, col = "red", lty = 2)
-lines(Pb_pred[5,] ~ f_pred, col = "red", lty = 2)
 ```{r min-weir-comp-fit, fig.width = 8, fig.height = 5}
 weir_comp_fit_plot(3)
 ```
 
-# draw fitted relationship: OLS
-polygon(c(f_pred, rev(f_pred)), c(ols_R_pred[2,], rev(ols_R_pred[3,])), col = alpha("grey", 0.5), border = NA)
-lines(ols_R_pred[1,] ~ f_pred, lwd = 2)
-lines(ols_R_pred[2,] ~ f_pred, lty = 2)
-lines(ols_R_pred[3,] ~ f_pred, lty = 2)
-lines(Pb_pred[3,] ~ f_pred, col = "red", lwd = 2)
 #### UGR
 
-# draw state pairs + uncertainty
-segments(f_tot[4,], Pb[3,], f_tot[5,], Pb[3,], col = "red")
-segments(f_tot[3,], Pb[4,], f_tot[3,], Pb[5,], col = "red")
-points(Pb[3,] ~ f_tot[3,], pch = 21, col = "red", bg = alpha("salmon", 0.5))
 ```{r ugr-weir-comp-fit, fig.width = 8, fig.height = 5}
 weir_comp_fit_plot(4)
 ```
 
-## Total Eggs vs. Total Spawners
 ### Carcass Sampling {.tabset .tabset-pills}
 
-This figure illustrates that total spawners is a reasonable index of total egg production. The three lines illustrate the relationship if each spawner (regardless of age/sex) had a fixed number of eggs.
 ```{r carc-comp-fit-func}
 carc_comp_fit_plot = function(j) {
   
@@ -631,79 +579,36 @@ carc_comp_fit_plot = function(j) {
 }
 ```
 
-```{r, fig.width = 6, fig.height = 4}
-# extract posterior summaries of total egg production by brood year
-f_tot = post_summ(post, "^f_tot[")
 #### CAT
 
-# extract posterior summaries of total spawners by brood year
-Sa_tot = post_summ(post, "^Sa_tot[")
 ```{r cat-carc-comp-fit, fig.width = 8, fig.height = 5}
 carc_comp_fit_plot(1)
 ```
 
-par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(3,3,1,1))
-plot(f_tot["mean",] ~ Sa_tot["mean",],
-     ylim = c(0, max(f_tot["97.5%",])),
-     xlim = c(0, max(Sa_tot["97.5%",])), type = "n",
-     ylab = "Total Egg Production (Millions)", xlab = "Total Spawners", las = 1, yaxt = "n")
-y_ticks = axisTicks(par("usr")[3:4], log = F)
-axis(side = 2, at = y_ticks, labels = y_ticks/1e6, las = 2)
 #### LOS
 
-segments(Sa_tot["2.5%",], f_tot["mean",], Sa_tot["97.5%",], f_tot["mean",], col = alpha("red", 0.5))
-segments(Sa_tot["mean",], f_tot["2.5%",], Sa_tot["mean",], f_tot["97.5%",], col = alpha("red", 0.5))
-points(f_tot["mean",] ~ Sa_tot["mean",], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
-abline(c(0, 1000), lty = 1)
-abline(c(0, 1800), lty = 2)
-abline(c(0, 3600), lty = 3)
-legend("bottomright", title = "If Each Spawner Had:",
-       legend = c("1000 Eggs", "1800 Eggs", "3600 Eggs"),
-       lty = c(1,2,3), bty = "n")
 ```{r lost-carc-comp-fit, fig.width = 8, fig.height = 5}
 carc_comp_fit_plot(2)
 ```
 
-## Parr per Egg
-
-This figure shows the inherent density dependence built in to the Beverton-Holt recruitment function: with increasing egg density, survival per egg decreases. The horizontal line/region shows the theoretical maximum ($\alpha$) in the absence of density dependence.
 #### MIN
 
-```{r, fig.width = 6, fig.height = 4}
-# extract posterior summaries of total egg production by brood year
-f_tot = post_summ(post, "^f_tot[")
 ```{r min-carc-comp-fit, fig.width = 8, fig.height = 5}
 carc_comp_fit_plot(3)
 ```
 
-# extract posterior summaries of total parr recruits by brood year
-Pb = post_summ(post, "^Pb[")
 #### UGR
 
-# conversion rates
-Pb_per_f_tot = post_summ(post, "^Pb_per_f_tot[")
 ```{r ugr-carc-comp-fit, fig.width = 8, fig.height = 5}
 carc_comp_fit_plot(4)
 ```
 
-# max survival
-alpha = post_summ(post, "^alpha")
 ## Spawn Status Data
 
-par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(3,3,1,1))
-plot(Pb_per_f_tot["mean",] ~ f_tot["mean",],
-     ylim = c(0, max(Pb_per_f_tot["97.5%",], alpha["97.5%",])),
-     xlim = c(0, max(f_tot["97.5%",])), type = "n",
-     ylab = "Parr per Egg", xlab = "Total Egg Production (Millions)", las = 1, xaxt = "n")
-x_ticks = axisTicks(par("usr")[1:2], log = F)
-axis(side = 1, at = x_ticks, labels = x_ticks/1e6)
 ```{r spawn-status-fits, fig.width = 8, fig.height = 5}
 par(oma = c(2,2,0,0))
 layout(matrix(1:(jags_data$nj * 2), 2, jags_data$nj), heights = c(1, 0.65))
 
-segments(f_tot["2.5%",], Pb_per_f_tot["mean",], f_tot["97.5%",], Pb_per_f_tot["mean",], col = alpha("red", 0.5))
-segments(f_tot["mean",], Pb_per_f_tot["2.5%",], f_tot["mean",], Pb_per_f_tot["97.5%",], col = alpha("red", 0.5))
-points(Pb_per_f_tot["mean",] ~ f_tot["mean",], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
 plot_f = function(j) {
   plot_tseries(post_summ(post, sub_index("^phi_Sb_Sa[.+,pop]", pop = j)), with(jags_data, carcs_spawned[,j]/carcs_sampled[,j])[observable], main = pops[j], ylim = c(0,1))
   par(mar = c(1.5,1.5,2,0.5), yaxs = "i")
@@ -717,115 +622,290 @@ mp = barplot(jags_data$carcs_sampled[observable,j], xaxt = "n", ylim = c(0, max(
   if (j == 1) mtext(side = 2, "Carcasses Sampled", line = 2)
 }
 
-rect(par("usr")[1], alpha["2.5%",], par("usr")[2], alpha["97.5%",], border = alpha("red", 0.5), col = alpha("salmon", 0.5))
-abline(h = alpha["mean",], lwd = 2, col = "red")
-box()
 junk = sapply(1:jags_data$nj, plot_f)
+```
+
+# Spawner-to-Parr Relationship {.tabset .tabset-pills}
+
+## Beverton-Holt
+
+All red components are posterior summaries (medians and 95% credible intervals). The black curve is from an `nls()` fit on reconstructed parr and roughly approximated total egg production -- the grey region is the confidence interval around this fit.
+
+```{r eggs-to-parr, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  # extract posterior samples of the BH productivity and capacity parameters
+  bh_params = post_subset(post, sub_index(c("alpha[pop]", "^beta[pop]$"), pop = j), matrix = TRUE)
+  
+  # extract posterior summaries of total spawners by brood year
+  Sa_tot = post_summ(post, sub_index("^Sa_tot[.+,pop]", pop = j))
+  
+  # extract posterior summaries of total egg production by brood year
+  f_tot = post_summ(post, sub_index("^f_tot[.+,pop]", pop = j))
+  
+  # extract posterior summaries of total parr recruits by brood year
+  Pb = post_summ(post, sub_index("^Pb[.+,pop]", pop = j))
+  
+  # predict parr recruits along a sequence of spawner abundances
+  Sa_pred = seq(0, max(Sa_tot[5,]), length = 30)
+  f_pred = seq(0, max(f_tot[5,]), length = 30)
+  
+  Pb_pred = t(sapply(1:post_dim(post, "saved"), function(i) BH(f_pred, bh_params[i,1], bh_params[i,2])))
+  colnames(Pb_pred) = paste0("Pb_pred[", 1:length(Sa_pred), "]")
+  Pb_pred = post_convert(cbind(postpack:::id_mat(post), Pb_pred))
+  Pb_pred = post_summ(Pb_pred, "Pb_pred")
+  
+  # fit ordinary least squares version
+  ols_fit = fit_fecund_BH(jags_data, pop = j)$BH_fit
+  
+  # draw 1000 random parameters
+  ols_params = exp(rmvnorm(1000, coef(ols_fit), vcov(ols_fit)))
+  
+  # calculate predicted curve at each pair/summarize
+  ols_R_pred = t(sapply(1:1000, function(i) BH(f_pred, ols_params[i,1], ols_params[i,2])))
+  ols_R_pred = apply(ols_R_pred, 2, function(x) quantile(x, c(0.5, 0.025, 0.975)))
+  
+  # graphical parameters
+  par(mar = c(1.5,1.5,1.5,0.5), tcl = -0.15, mgp = c(2,0.35,0))
+  
+  # empty plot
+  plot(1, 1, type = "n", xlim = range(0, f_tot[5,]), ylim = range(0, Pb[5,], Pb_pred[5,]),
+       xlab = "", ylab = "", xaxt = "n", yaxt = "n", main = pops[j])
+  
+  x_ticks = axisTicks(par("usr")[1:2], log = FALSE)
+  y_ticks = axisTicks(par("usr")[3:4], log = FALSE)
+  axis(side = 1, at = x_ticks, labels = x_ticks/1e6)
+  axis(side = 2, at = y_ticks, labels = y_ticks/1e3)
+  
+  # draw fitted relationship: Bayesian
+  polygon(c(f_pred, rev(f_pred)), c(Pb_pred[4,], rev(Pb_pred[5,])), col = alpha("salmon", 0.5), border = NA)
+  lines(Pb_pred[4,] ~ f_pred, col = "red", lty = 2)
+  lines(Pb_pred[5,] ~ f_pred, col = "red", lty = 2)
+  
+  # draw fitted relationship: OLS
+  polygon(c(f_pred, rev(f_pred)), c(ols_R_pred[2,], rev(ols_R_pred[3,])), col = alpha("grey", 0.5), border = NA)
+  lines(ols_R_pred[1,] ~ f_pred, lwd = 2)
+  lines(ols_R_pred[2,] ~ f_pred, lty = 2)
+  lines(ols_R_pred[3,] ~ f_pred, lty = 2)
+  lines(Pb_pred[3,] ~ f_pred, col = "red", lwd = 2)
+  
+  # draw state pairs + uncertainty
+  segments(f_tot[4,], Pb[3,], f_tot[5,], Pb[3,], col = alpha("red", 0.5))
+  segments(f_tot[3,], Pb[4,], f_tot[3,], Pb[5,], col = alpha("red", 0.5))
+  points(Pb[3,] ~ f_tot[3,], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Total Egg Production (Millions)")
+mtext(side = 2, outer = T, line = 0.25, "Parr Recruits (Thousands)")
+```
+
+## Total Eggs vs. Total Spawners
+
+This figure illustrates that total spawners is a reasonable index of total egg production. The three lines illustrate the relationship if each spawner (regardless of age/sex) had a fixed number of eggs.
+
+```{r eggs-vs-spawners, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  # extract posterior summaries of total spawners by brood year
+  Sa_tot = post_summ(post, sub_index("^Sa_tot[.+,pop]", pop = j))
+  
+  # extract posterior summaries of total egg production by brood year
+  f_tot = post_summ(post, sub_index("^f_tot[.+,pop]", pop = j))
+
+  # graphical parameters
+  par(mar = c(1.5,1.5,1.5,0.5), tcl = -0.15, mgp = c(2,0.35,0))
+  
+  # empty plot
+  plot(f_tot["mean",] ~ Sa_tot["mean",],
+       ylim = c(0, max(f_tot["97.5%",])),
+       xlim = c(0, max(Sa_tot["97.5%",])), type = "n",
+       ylab = "", xlab = "", las = 1, yaxt = "n")
+  
+  # yaxis ticks
+  y_ticks = axisTicks(par("usr")[3:4], log = F)
+  axis(side = 2, at = y_ticks, labels = y_ticks/1e6, las = 2)
+  
+  segments(Sa_tot["2.5%",], f_tot["mean",], Sa_tot["97.5%",], f_tot["mean",], col = alpha("red", 0.5))
+  segments(Sa_tot["mean",], f_tot["2.5%",], Sa_tot["mean",], f_tot["97.5%",], col = alpha("red", 0.5))
+  points(f_tot["mean",] ~ Sa_tot["mean",], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+  abline(c(0, 1000), lty = 1)
+  abline(c(0, 1800), lty = 2)
+  abline(c(0, 3600), lty = 3)
+
+  if (j == 1) {
+    legend("bottomright", title = "If Each Spawner Had:",
+           legend = c("1000 Eggs", "1800 Eggs", "3600 Eggs"),
+           lty = c(1,2,3), bty = "n", cex = 0.75)
+  }
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Total Spawners")
+mtext(side = 2, outer = T, line = 0.25, "Total Egg Production (Millions)")
+```
+
+## Parr per Egg
+
+This figure shows the inherent density dependence built in to the Beverton-Holt recruitment function: with increasing egg density, survival per egg decreases. The horizontal line/region shows the theoretical maximum ($\alpha_j$) in the absence of density dependence.
+
+```{r parr-per-egg-v-eggs, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  # extract posterior summaries of total egg production by brood year
+  f_tot = post_summ(post, sub_index("^f_tot[.+,pop]", pop = j))
+  
+  # conversion rates
+  Pb_per_f_tot = post_summ(post, sub_index("^Pb_per_f_tot[.+,pop]", pop = j))
+  
+  # max survival
+  alpha = post_summ(post, sub_index("^alpha[pop]", pop = j))
+  
+  # graphical parameters
+  par(mar = c(1.5,1.5,1.5,0.5), tcl = -0.15, mgp = c(2,0.35,0))
+  
+  # empty plot
+  plot(Pb_per_f_tot["mean",] ~ f_tot["mean",],
+       # ylim = c(0, max(Pb_per_f_tot["97.5%",], alpha["97.5%",])),
+       ylim = c(0, 1),
+       xlim = c(0, max(f_tot["97.5%",])), type = "n",
+       ylab = "", xlab = "", las = 1, xaxt = "n", main = pops[j])
+  
+  # x-axis
+  x_ticks = axisTicks(par("usr")[1:2], log = F)
+  axis(side = 1, at = x_ticks, labels = x_ticks/1e6)
+  
+  segments(f_tot["2.5%",], Pb_per_f_tot["mean",], f_tot["97.5%",], Pb_per_f_tot["mean",], col = alpha("red", 0.5))
+  segments(f_tot["mean",], Pb_per_f_tot["2.5%",], f_tot["mean",], Pb_per_f_tot["97.5%",], col = alpha("red", 0.5))
+  points(Pb_per_f_tot["mean",] ~ f_tot["mean",], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+  
+  rect(par("usr")[1], alpha["2.5%",], par("usr")[2], alpha["97.5%",], border = alpha("red", 0.5), col = alpha("salmon", 0.5))
+  abline(h = alpha["mean",], lwd = 2, col = "red")
+  box()
+}
+  
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Total Egg Production (Millions)")
+mtext(side = 1, outer = T, line = 0.25, "Parr per Egg")
 ```
 
 ## Parr per Spawner
 
 This figure is identical to above, but shows parr production per spawner instead of per egg.
 
-```{r, fig.width = 6, fig.height = 4}
-# extract posterior summaries of total spawners by brood year
-Sa_tot = post_summ(post, "^Sa_tot[")
+```{r parr-per-spawner-v-spawners, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  # extract posterior summaries of total spawners by brood year
+  Sa_tot = post_summ(post, sub_index("^Sa_tot[.+,pop]", pop = j))
+  
+  # conversion rates
+  Pb_per_Sa_tot = post_summ(post, sub_index("^Pb_per_Sa_tot[.+,pop]", pop = j))
+  
+  # graphical parameters
+  par(mar = c(1.5,1.5,1.5,0.5), tcl = -0.15, mgp = c(2,0.35,0))
+  
+  # empty plot
+  plot(Pb_per_Sa_tot["mean",] ~ Sa_tot["mean",],
+       ylim = c(0, max(Pb_per_Sa_tot["97.5%",])),
+       xlim = c(0, max(Sa_tot["97.5%",])), type = "n",
+       ylab = "", xlab = "", las = 1)
+  
+  segments(Sa_tot["2.5%",], Pb_per_Sa_tot["mean",], Sa_tot["97.5%",], Pb_per_Sa_tot["mean",], col = alpha("red", 0.5))
+  segments(Sa_tot["mean",], Pb_per_Sa_tot["2.5%",], Sa_tot["mean",], Pb_per_Sa_tot["97.5%",], col = alpha("red", 0.5))
+  points(Pb_per_Sa_tot["mean",] ~ Sa_tot["mean",], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+}
 
-# extract posterior summaries of total parr recruits by brood year
-Pb = post_summ(post, "^Pb[")
-
-# conversion rates
-Pb_per_Sa_tot = post_summ(post, "^Pb_per_Sa_tot[")
-
-par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(3,3,1,1))
-plot(Pb_per_Sa_tot["mean",] ~ Sa_tot["mean",],
-     ylim = c(0, max(Pb_per_Sa_tot["97.5%",])),
-     xlim = c(0, max(Sa_tot["97.5%",])), type = "n",
-     ylab = "Parr per Spawner", xlab = "Spawners", las = 1)
-segments(Sa_tot["2.5%",], Pb_per_Sa_tot["mean",], Sa_tot["97.5%",], Pb_per_Sa_tot["mean",], col = alpha("red", 0.5))
-segments(Sa_tot["mean",], Pb_per_Sa_tot["2.5%",], Sa_tot["mean",], Pb_per_Sa_tot["97.5%",], col = alpha("red", 0.5))
-points(Pb_per_Sa_tot["mean",] ~ Sa_tot["mean",], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Total Spawners")
+mtext(side = 1, outer = T, line = 0.25, "Parr per Spawner")
 ```
 
 # Overwinter Survival Relationships
 
-```{r overwinter-survival, fig.width = 4, fig.height = 7}
+```{r overwinter-survival-plots, fig.width = 8, fig.height = 5}
+plot_fn = function(j) {
+  # extract parr, scale it to PEU, and create new post object
+  Pa = post_subset(post, sub_index("^Pa[.+,.,pop]", pop = j), matrix = TRUE)
+  Pa_scaled = Pa/jags_data$peu[j]
+  colnames(Pa_scaled) = gsub("Pa", "Pa_scaled", x = colnames(Pa_scaled))
+  post_pa = post_convert(cbind(postpack:::id_mat(post), Pa_scaled))
+  
+  # summarize posterior of scaled parr
+  Pa_scaled_mean = array_format(post_summ(post_pa, sub_index("Pa_scaled[.+,.+,pop]", pop = j))["mean",])
+  Pa_scaled_lwr = array_format(post_summ(post_pa, sub_index("Pa_scaled[.+,.+,pop]", pop = j))["2.5%",])
+  Pa_scaled_upr = array_format(post_summ(post_pa, sub_index("Pa_scaled[.+,.+,pop]", pop = j))["97.5%",])
+  
+  # create vectors to predict survival at: for credible regions and mean curve
+  Pa_scaled_seq = matrix(NA, 30, 2)
+  Pa_scaled_seq[,i_fall] = seq(min(Pa_scaled_lwr[,i_fall,j], na.rm = TRUE), max(Pa_scaled_upr[,i_fall,j], na.rm = T), length = 30)
+  Pa_scaled_seq[,i_spring] = seq(min(Pa_scaled_lwr[,i_spring,j], na.rm = TRUE), max(Pa_scaled_upr[,i_spring,j], na.rm = T), length = 30)
+  
+  # extract posteriors of coefficients
+  gamma0 = post_subset(post, sub_index("gamma0[.,pop]", pop = j), matrix = TRUE)
+  gamma1 = post_subset(post, sub_index("gamma1[.,pop]", pop = j), matrix = TRUE)
+  
+  # extract/format posterior summaries of realized survivals
+  phi_Pa_Mb_mean = array_format(post_summ(post, sub_index("^phi_Pa_Mb[.+,.+,pop]", pop = j))["mean",])
+  phi_Pa_Mb_lwr = array_format(post_summ(post,  sub_index("^phi_Pa_Mb[.+,.+,pop]", pop = j))["2.5%",])
+  phi_Pa_Mb_upr = array_format(post_summ(post,  sub_index("^phi_Pa_Mb[.+,.+,pop]", pop = j))["97.5%",])
+  
+  # function to create predicted survival curves for one posterior sample
+  pred_fn = function(i) {
+    pred_phi_Pa_Mb1 = plogis(gamma0[i,1] + gamma1[i,1] * Pa_scaled_seq[,1])
+    pred_phi_Pa_Mb2 = plogis(gamma0[i,2] + gamma1[i,2] * Pa_scaled_seq[,2])
+    
+    names(pred_phi_Pa_Mb1) = paste0("pred_phi_Pa_Mb[", 1:30, ",1]")
+    names(pred_phi_Pa_Mb2) = paste0("pred_phi_Pa_Mb[", 1:30, ",2]")
+    
+    c(pred_phi_Pa_Mb1, pred_phi_Pa_Mb2)
+  }
+  
+  # calculate predicted survivals and add to posterior samples
+  pred_phi_Pa_Mb = t(sapply(1:post_dim(post, "saved"), pred_fn))
+  post_pa = post_bind(post_pa, pred_phi_Pa_Mb)
+  
+  # summarize predicted survivals
+  pred_phi_Pa_Mb_mean = array_format(post_summ(post_pa, "pred_phi_Pa_Mb")["mean",])
+  pred_phi_Pa_Mb_lwr = array_format(post_summ(post_pa, "pred_phi_Pa_Mb")["2.5%",])
+  pred_phi_Pa_Mb_upr = array_format(post_summ(post_pa, "pred_phi_Pa_Mb")["97.5%",])
 
-# extract parr, scale it to PEU, and add to posterior samples
-Pa = post_subset(post, "^Pa[", matrix = T)
-Pa_scaled = Pa/jags_data$peu
-colnames(Pa_scaled) = gsub("Pa", "Pa_scaled", x = colnames(Pa_scaled))
-post = post_bind(post, Pa_scaled)
-
-# summarize posterior of scaled parr
-Pa_scaled_mean = array_format(post_summ(post, "Pa_scaled")["mean",])
-Pa_scaled_lwr = array_format(post_summ(post, "Pa_scaled")["2.5%",])
-Pa_scaled_upr = array_format(post_summ(post, "Pa_scaled")["97.5%",])
-
-# create vectors to predict survival at: for credible regions and mean curve
-Pa_scaled_seq = matrix(NA, 30, 2)
-Pa_scaled_seq[,1] = seq(min(Pa_scaled_lwr[,1], na.rm = T), max(Pa_scaled_upr[,1], na.rm = T), length = 30)
-Pa_scaled_seq[,2] = seq(min(Pa_scaled_lwr[,2], na.rm = T), max(Pa_scaled_upr[,2], na.rm = T), length = 30)
-
-# extract posteriors of coefficients
-gamma0 = post_subset(post, "gamma0", matrix = T)
-gamma1 = post_subset(post, "gamma1", matrix = T)
-
-# extract/format posterior summaries of realized survivals
-phi_Pa_Mb_mean = array_format(post_summ(post, "^phi_Pa_Mb[")["mean",])
-phi_Pa_Mb_lwr = array_format(post_summ(post, "^phi_Pa_Mb[")["2.5%",])
-phi_Pa_Mb_upr = array_format(post_summ(post, "^phi_Pa_Mb[")["97.5%",])
-
-# function to create predicted survival curves for one posterior sample
-f = function(i) {
-  pred_phi_Pa_Mb1 = plogis(gamma0[i,1] + gamma1[i,1] * Pa_scaled_seq[,1])
-  pred_phi_Pa_Mb2 = plogis(gamma0[i,2] + gamma1[i,2] * Pa_scaled_seq[,2])
-
-  names(pred_phi_Pa_Mb1) = paste0("pred_phi_Pa_Mb[", 1:30, ",1]")
-  names(pred_phi_Pa_Mb2) = paste0("pred_phi_Pa_Mb[", 1:30, ",2]")
-
-  c(pred_phi_Pa_Mb1, pred_phi_Pa_Mb2)
+  # function to draw plot for one LH-type
+  plot_fn2 = function(i) {
+    # blank plot of correct dimensions
+    plot(1,1, type = "n", 
+         ylim = range(pred_phi_Pa_Mb_lwr[,i], pred_phi_Pa_Mb_upr[,i], phi_Pa_Mb_lwr[,i,j], phi_Pa_Mb_upr[,i,j], na.rm = T),
+         xlim = range(0, Pa_scaled_seq), 
+         main = ifelse(i == 1, pops[j], "")
+    )
+    
+    # expected relationship
+    polygon(c(Pa_scaled_seq[,i], rev(Pa_scaled_seq[,i])), c(pred_phi_Pa_Mb_lwr[,i], rev(pred_phi_Pa_Mb_upr[,i])), border = NA, col = alpha("salmon", 0.5))
+    lines(pred_phi_Pa_Mb_lwr[,i] ~ Pa_scaled_seq[,i], col = "red", lty = 2)
+    lines(pred_phi_Pa_Mb_upr[,i] ~ Pa_scaled_seq[,i], col = "red", lty = 2)
+    lines(pred_phi_Pa_Mb_mean[,i] ~ Pa_scaled_seq[,i], col = "red", lwd = 2)
+    
+    # realized survivals
+    segments(Pa_scaled_lwr[,i,j], phi_Pa_Mb_mean[,i,j], Pa_scaled_upr[,i,j], phi_Pa_Mb_mean[,i,j], col = alpha("red", 0.5))
+    segments(Pa_scaled_mean[,i,j], phi_Pa_Mb_lwr[,i,j], Pa_scaled_mean[,i,j], phi_Pa_Mb_upr[,i,j], col = alpha("red", 0.5))
+    points(phi_Pa_Mb_mean[,i,j] ~ Pa_scaled_mean[,i,j], pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+  }
+  
+  # create the plot
+  par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(1,1,2,1))
+  plot_fn2(1); if (j == 1) mtext(side = 2, line = 1.5, "Fall Migrants")
+  plot_fn2(2); if (j == 1) mtext(side = 2, line = 1.5, "Spring Migrants")
+  
 }
 
-# calculate predicted survivals and add to posterior samples
-pred_phi_Pa_Mb = t(sapply(1:post_dim(post, "saved"), f))
-post = post_bind(post, pred_phi_Pa_Mb)
-
-# summarize predicted survivals
-pred_phi_Pa_Mb_mean = array_format(post_summ(post, "pred_phi_Pa_Mb")["mean",])
-pred_phi_Pa_Mb_lwr = array_format(post_summ(post, "pred_phi_Pa_Mb")["2.5%",])
-pred_phi_Pa_Mb_upr = array_format(post_summ(post, "pred_phi_Pa_Mb")["97.5%",])
-
-# function to draw plot for one LH-type
-plot_fun = function(i) {
-  # blank plot of correct dimensions
-  plot(1,1, type = "n", 
-       ylim = range(pred_phi_Pa_Mb_lwr[,i], pred_phi_Pa_Mb_upr[,i], phi_Pa_Mb_lwr[,i], phi_Pa_Mb_upr[,i], na.rm = T),
-       xlim = range(0, Pa_scaled_seq), 
-       main = c("Fall Migrants", "Spring Migrants")[i]
-  )
-  
-  # expected relationship
-  polygon(c(Pa_scaled_seq[,i], rev(Pa_scaled_seq[,i])), c(pred_phi_Pa_Mb_lwr[,i], rev(pred_phi_Pa_Mb_upr[,i])), border = NA, col = alpha("salmon", 0.5))
-  lines(pred_phi_Pa_Mb_lwr[,i] ~ Pa_scaled_seq[,i], col = "red", lty = 2)
-  lines(pred_phi_Pa_Mb_upr[,i] ~ Pa_scaled_seq[,i], col = "red", lty = 2)
-  lines(pred_phi_Pa_Mb_mean[,i] ~ Pa_scaled_seq[,i], col = "red", lwd = 2)
-  
-  # realized survivals
-  segments(Pa_scaled_lwr[,i], phi_Pa_Mb_mean[,i], Pa_scaled_upr[,i], phi_Pa_Mb_mean[,i], col = alpha("red", 0.5))
-  segments(Pa_scaled_mean[,i], phi_Pa_Mb_lwr[,i], Pa_scaled_mean[,i], phi_Pa_Mb_upr[,i], col = alpha("red", 0.5))
-  points(phi_Pa_Mb_mean[,i] ~ Pa_scaled_mean[,i], pch = 21, col = "red", bg = alpha("salmon", 0.5))
-}
-
-# create the plot
-par(mfrow = c(2,1), mgp = c(2,0.35, 0), tcl = -0.15, mar = c(1,1,2,1), oma = c(2,2,0,0))
-plot_fun(1)
-plot_fun(2)
-mtext(side = 1, line = 1, outer = T, "LH-Specific Parr/PEU", cex = 1.2)
-mtext(side = 2, line = 1, outer = T, "Overwinter Survival", cex = 1.2)
+par(mfcol = c(jags_data$ni,jags_data$nj), oma = c(2.5,3.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 1, line = 1.5, outer = T, "LH-Specific Parr/PEU", cex = 1.2)
+mtext(side = 2, line = 2, outer = T, "Overwinter Survival", cex = 1.2)
 ```
 
-# Equivilency Rates
+
+# Equivilency Rates {.tabset .tabset-pills}
 
 ## Smolt-to-Adult Rates
 
@@ -833,152 +913,117 @@ This is survival from $Ma$ (smolts at the top of LGD) to $Ra$ (adults returning 
 
 The adult part is calculated across return years, by summing the number of adults of each age (regardless of sex) that return in the appropriate years. For example, the SAR for brood year 1991 uses smolt that were spawned in 1991, out-migrated in spring 1993, divided by the sum of age 3 adults in 1994, age 4 adults in 1995, and age 5 adults in 1996. The calculation is done for hatchery and natural origin fish separately. Only SARs through brood year 2014 are calculated, since this is the last year of complete adult returns.
 
-```{r sar-plot, fig.width = 6, fig.height = 4}
-# function to calculate posterior 
-get_SAR_post = function(post, jags_data) {
-  # extract posterior abundances
-  Ra_post = post_subset(post, "^Ra[", T) # adults returning to Columbia River mouth
-  Ma_post = post_subset(post, "^Ma[", T) # smolts at top of LGD
+
+```{r adults-per-smolt, fig.width = 6, fig.height = 5}
+sar_yrs = all_yrs[(jags_data$kmax+1):(jags_data$ny - jags_data$kmax)]
+
+plot_fn = function(j) {
+  # which years had zero hatchery smolt released
+  zero_hor_smolt = post_summ(post, sub_index("Mb[year,LH_type,origin,pop]", year = c(6:29), LH_type = i_spring, origin = o_hor, pop = j))["mean",] == 0
+
+  # summarize rates
+  Ra_per_Ma_nor = post_summ(post, sub_index("Ra_per_Ma[.+,origin,pop]", origin = o_nor, pop = j)) * 100
+  Ra_per_Ma_hor = post_summ(post, sub_index("Ra_per_Ma[.+,origin,pop]", origin = o_hor, pop = j)) * 100
+
+  # make hatchery values NA in year with no smolt
+  Ra_per_Ma_hor[,zero_hor_smolt] = NA
+
+  # plot natural origin time series
+  plot_tseries(est = Ra_per_Ma_nor, yrs = sar_yrs, main = pops[j], ylim = c(0, 10))
   
-  # number of saved samples
-  ni = post_dim(post, "saved")
-  
-  # first and last brood year SAR can be calculated for
-  first_SAR_y = jags_data$kmax + 1
-  last_SAR_y = jags_data$ny - jags_data$kmax
-  
-  # containers
-  nat_SAR = hat_SAR = NULL
-  
-  # loop over mcmc iters
-  for (i in 1:ni) {
-    # extract quantities for this iter
-    Ra = array_format(Ra_post[i,])
-    Ma = array_format(Ma_post[i,])
-    
-    # give names
-    dimnames(Ra) = dimnames(jags_data$n_remove)
-    dimnames(Ma) = dimnames(jags_data$Mb_obs)
-    
-    # drop sex structure from Ra
-    Ra = Ra[,,1,] + Ra[,,2,]
-    
-    # loop over years
-    nat_SAR_i = hat_SAR_i = NULL
-    for (y in first_SAR_y:last_SAR_y) {
-      # sum up smolts across life history types
-      nat_smolt = sum(Ma[y,,"Nat"])
-      hat_smolt = sum(Ma[y,,"Hat"])
-      
-      # sum up returning adults from this brood
-      nat_adults = Ra[y+3,1,"Nat"] + Ra[y+4,2,"Nat"] + Ra[y+5,3,"Nat"]
-      hat_adults = Ra[y+3,1,"Hat"] + Ra[y+4,2,"Hat"] + Ra[y+5,3,"Hat"]
-      
-      nat_SAR_i = c(nat_SAR_i, nat_adults/nat_smolt)
-      hat_SAR_i = c(hat_SAR_i, hat_adults/hat_smolt)
-    }
-    
-    # combine with other mcmc iters
-    nat_SAR = rbind(nat_SAR, nat_SAR_i)
-    hat_SAR = rbind(hat_SAR, hat_SAR_i)
+  # add hatchery origin time series
+  polygon(x = c(sar_yrs, rev(sar_yrs)), y = c(Ra_per_Ma_hor["2.5%",], rev(Ra_per_Ma_hor["97.5%",])), col = alpha("skyblue2", 0.5), border = NA)
+  lines(Ra_per_Ma_hor["2.5%",] ~ sar_yrs, col = "blue", lty = 2)
+  lines(Ra_per_Ma_hor["97.5%",] ~ sar_yrs, col = "blue", lty = 2)
+  lines(Ra_per_Ma_hor["mean",] ~ sar_yrs, col = "blue", lwd = 2)
+
+  if (j == 1) {
+    legend("topright", legend = c("NOR", "HOR"), title = "Origin",
+         pch = 22, col = c("red", "blue"), pt.cex = 2, pt.bg = alpha(c("salmon", "skyblue2"), 0.5), bty = "n")
   }
-  
-  colnames(nat_SAR) = paste0("SAR[", first_SAR_y:last_SAR_y, ",1]")
-  colnames(hat_SAR) = paste0("SAR[", first_SAR_y:last_SAR_y, ",2]")
-  
-  # drop out SAR years for hatchery fish where missing
-  hat_SAR = hat_SAR[,!is.na(colSums(hat_SAR))]
-  
-  out = cbind(nat_SAR, hat_SAR)
-  return(out)
 }
-
-# apply the function
-SAR_post = get_SAR_post(post, jags_data)
-
-# combine samples with main posterior object
-post = post_bind(post, SAR_post)
-
-# calculate/format posterior summaries
-SAR_mean = array_format(post_summ(post, "SAR")["mean",]) * 100
-SAR_lwr = array_format(post_summ(post, "SAR")["2.5%",]) * 100
-SAR_upr = array_format(post_summ(post, "SAR")["97.5%",]) * 100
-
-SAR_mean[SAR_mean == "Inf"] = NA
-SAR_lwr[SAR_lwr == "Inf"] = NA
-SAR_upr[SAR_upr == "Inf"] = NA
-
-# subset years
-all_yrs = as.numeric(dimnames(jags_data$Pa_obs)[[1]])
-SAR_yrs = all_yrs[1:nrow(SAR_mean)]
-
-# graphics device
-par(mar = c(3,3,1,1), mgp = c(2,0.35,0), tcl = -0.2)
-
-# blank plot with appropriate dimensions
-plot(SAR_mean[,1] ~ SAR_yrs, ylab = "Adults/100 Smolt", xlab = "Brood Year",
-     xlim = range(all_yrs), ylim = c(0, max(SAR_upr, na.rm = T)), type = "n", las = 1)
-
-# draw posterior summary for natural origin
-polygon(x = c(SAR_yrs, rev(SAR_yrs)), y = c(SAR_lwr[,1], rev(SAR_upr[,1])), col = alpha("skyblue2", 0.5), border = NA)
-lines(SAR_lwr[,1] ~ SAR_yrs, col = "blue", lty = 2)
-lines(SAR_upr[,1] ~ SAR_yrs, col = "blue", lty = 2)
-lines(SAR_mean[,1] ~ SAR_yrs, col = "blue", lwd = 2)
-
-# draw posterior summary for hatchery origin
-polygon(x = c(SAR_yrs, rev(SAR_yrs)), y = c(SAR_lwr[,2], rev(SAR_upr[,2])), col = alpha("salmon", 0.5), border = NA)
-lines(SAR_lwr[,2] ~ SAR_yrs, col = "red", lty = 2)
-lines(SAR_upr[,2] ~ SAR_yrs, col = "red", lty = 2)
-lines(SAR_mean[,2] ~ SAR_yrs, col = "red", lwd = 2)
-
-# draw a legend
-legend("topright", legend = c("Natural", "Hatchery"), title = "Origin",
-       pch = 22, col = c("blue", "red"), pt.cex = 2, pt.bg = alpha(c("skyblue2", "salmon"), 0.5), bty = "n")
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, "Adults per 100 Smolt")
 ```
 
 ## Parr per Spawner
 
 "Spawner" means total spawners that survive pre-spawn mortality.
 
-```{r, fig.width = 6, fig.height = 4}
-par(oma = c(1,1,0,0))
-plot_tseries(est = post_summ(post, "Pb_per_Sa_tot["), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]))
-mtext(side = 1, outer = T, line = -0.5, "Brood Year")
-mtext(side = 2, outer = T, line = 0, "Parr/Spawner")
+```{r parr-per-spawner, fig.width = 6, fig.height = 5}
+plot_fn = function(j) {
+  plot_tseries(est = post_summ(post, sub_index("Pb_per_Sa_tot[.+,pop]", pop = j)), yrs = as.numeric(rownames(jags_data$Pa_obs[,,j])[observable]), main = pops[j])
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, "Parr per Spawner")
 ```
 
 ## Smolt per Spawner
 
 "Smolt" means total NOR smolt that survive their second winter, immediately prior to migration out of basin.
 
-```{r, fig.width = 6, fig.height = 4}
-par(oma = c(1,1,0,0))
-plot_tseries(est = post_summ(post, "Mb_per_Sa_tot["), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]))
-mtext(side = 1, outer = T, line = -0.5, "Brood Year")
-mtext(side = 2, outer = T, line = 0, "Smolt/Spawner")
+```{r smolt-per-spawner, fig.width = 6, fig.height = 5}
+plot_fn = function(j) {
+  plot_tseries(est = post_summ(post, sub_index("Mb_per_Sa_tot[.+,pop]", pop = j)), yrs = as.numeric(rownames(jags_data$Pa_obs[,,j])[observable]), main = pops[j])
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, "Parr per Spawner")
 ```
 
 ## Spawners per Spawner
 
 This is the sum of all spawners that were produced by the spawners in a given brood year (i.e., accounts for adult recruits returning across multiple ages/years). "Brood year" refers to the year the returning production was spawned. 
 
-```{r, fig.width = 6, fig.height = 4}
-all_yrs = as.numeric(dimnames(jags_data$Pa_obs)[[1]])
-
-par(oma = c(1,1,0,0))
-plot_tseries(est = post_summ(post, "Sa_tot_per_Sa_tot["), yrs = all_yrs[(jags_data$kmax+1):(jags_data$ny - jags_data$kmax)])
-mtext(side = 1, outer = T, line = -0.5, "Brood Year")
-mtext(side = 2, outer = T, line = 0, "Spawners/Spawner")
-abline(h = 1, lty = 2)
+```{r spawners-per-spawner, fig.width = 6, fig.height = 5}
+plot_fn = function(j) {
+  plot_tseries(est = post_summ(post, sub_index("Sa_tot_per_Sa_tot[.+,pop]", pop = j)), yrs = all_yrs[(jags_data$kmax+1):(jags_data$ny - jags_data$kmax)], main = pops[j])
+ abline(h = 1, lty = 2)
+}
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, "Spawner per Spawner")
 ```
 
-# Number of Strays
+# Straying Dynamics {.tabset .tabset-pills}
 
-```{r stray-tot-plot, fig.width = 6, fig.height = 4}
-par(oma = c(1,1,0,0))
-plot_tseries(post_summ(post, "n_stray_tot"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]))
-mtext(side = 1, outer = T, line = -0.5, "Return Year")
-mtext(side = 2, outer = T, line = 0, "Number of Strays")
+## Number of Strays
+
+```{r n-stray, fig.width = 6, fig.height = 5}
+plot_fn = function(j) {
+  plot_tseries(est = post_summ(post, sub_index("n_stray_tot[.+,pop]", pop = j)), yrs = as.numeric(rownames(jags_data$Pa_obs[,,j])[observable]), main = pops[j])
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 1, outer = T, line = 0.25, "Return Year")
+mtext(side = 2, outer = T, line = 0.25, "Number of Strays Entering Population")
+```
+
+## Stray Composition
+
+```{r stray-comp, fig.width = 6, fig.height = 5}
+plot_fn = function(j) {
+  x = post_summ(post, sub_index("stray_comp[age,sex,origin,pop]", age = ".", sex = ".", origin = o_hor, pop = j))
+  
+  par(mar = c(5,2,1,1), tcl = -0.15, mgp = c(2, 0.35, 0))
+  mp = barplot(x["mean",], ylim = c(0, 0.6), xaxt = "n", main = pops[j], col = alpha("salmon", 0.5), border = alpha("red", 0.5))
+  segments(mp, x["2.5%",], mp, x["97.5%",], col = alpha("red", 0.5))
+  axis(side = 1, at = mp, labels = paste0(rep(c("Female", "Male"), each = jags_data$nk), "-", rep(jags_data$kmin:jags_data$kmax, jags_data$ns)), las = 2)
+  segments(par("usr")[1], par("usr")[3], par("usr")[2], par("usr")[3], xpd = TRUE)
+}
+
+par(mfrow = c(2,2), oma = c(0,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_fn)
+mtext(side = 2, outer = T, line = 0.25, "Proportion of Strays by Age/Sex")
 ```
 
 # Ocean Survival
